--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,14 +10,12 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../img/back.jpg") top right no-repeat;
-  filter: grayscale(100%);
-  background-size: cover;
   left: 0;
   right: 0;
   top: 0;
   height: 100vh;
   z-index: -1;
+  background-color: crimson;
 }
 .move{
   position: relative;
